Fixed My Tools section spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -74,12 +74,13 @@ p.project-info {
 }
 
 .about-header {
-    color: var(--accent-color);
+    color: var(--primary-color);
 }
 
 .about-section h2 {
     font-size: 50px;
     line-height: 50px;
+    color: black;
 }
 
 .about-section h3 {
@@ -100,15 +101,16 @@ p.project-info {
 
 .tools-header {
     color: var(--accent-color);
-    font-size: 120px;
+    font-size: 100px;
     padding-bottom: 80px;
 }
 
 .tool {
-    border: solid var(--primary-color) 1px;
+    border: solid var(--accent-color) 2px;
     border-radius: 8px;
     padding: 30px;
     margin: 20px;
+    width: 300px;
 }
 
 .row-two {
@@ -128,6 +130,7 @@ p.project-info {
 .btn-project {
     background-color: var(--primary-color);
     border-radius: 4px;
+    border: solid var(--primary-color) 2px;
     color: var(--bg-color);
     line-height: 27px;
     padding: 12px 20px;
